Fixed issue where slide images overflowed slide

--- a/css/style.css
+++ b/css/style.css
@@ -182,22 +182,21 @@ small {
   font-size: 20px;
   color: grey;
 }
-/*
+
 a {
-  text-decoration: none;
-  border-bottom: 1px solid #ddd;
-}
-*/
-a:link, a:visited {
-  color: grey;
+  color: green;
   text-decoration: underline;
   cursor: auto;
   pointer-events: auto;
 }
 
-a:link:active, a:visited:active {
-  color: orange;
-  pointer-events: auto;
+img {
+  /*max-width:100%;*/
+  max-height: 500px;
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 li {
